[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pyyaml = "^6.0.1"
alembic = "^1.12.0"
jinja2 = "^3.1.2"
passlib = "^1.7.4"
sqlalchemy = "^2.0.20"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
fastapi-login = "^1.9.1"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
pytest = "^7.4.1"
transformers = "^4.32.1"
torch = "^2.0.1"
diffusers = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
